--- a/style/style.css
+++ b/style/style.css
@@ -10,22 +10,20 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    text-align: center;
-    justify-content: center;
-    display: flex;
+
 }
 .first-h{
     color: rgb(19, 221, 120);
     font-size: 35px;
-    margin-left: 500px;
-    margin-top: 200px;
+    margin-top: 220px;
+    margin-left: 900px;
 }
 .secound-hh{
     color: rgb(19, 221, 120);
     font-size: 80px;
-    margin-top: 300px;
-    margin-left: 100px;
-    padding: 50px;
+    margin-top: 380px;
+    text-align: center;
+
 }
 main{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -120,26 +118,32 @@ main{
 }
 .footer{
     width: 100%;
-    height: 100%;
+    height: 420px;
     background-color: #070211;
     color: white;
+    font-size: 20px;
 }
 .left1{
     padding-left: 120px;
-    padding-top: 100px;
+    padding-top: 80px;
 }
 .left2{
     padding-left: 120px;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
+    padding-top: 100px;
 }
 .link{
-    justify-content: center;
-    padding: auto;
     text-align: center;
-    padding: 80px;
+    
 }
 .right{
     text-align: left;
-    font-size: 24px;
-    justify-content: left;
+}
+.right1{
+    padding-top: 200px;
+     color: #ff0000;
+}
+.unsub{
+ color: #ff0000;
+
 }
